# comfyui-dit-watermark

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: attack_resistance_benchmarks.md  flux2_4b_9b_watermark_benchmark.md
grow_dit/: __init__.py  codec.py  config.py  core.py  ecc.py  robust.py  sampler.py
scripts/: benchmark_flux2_models.py  comfy_api.py  inject_workflow.py
tests/: __init__.py  test_comfy_api.py  test_core.py  test_ecc.py  test_nodes.py  test_robust.py  test_sampler.py  test_workflow.py
validation/: validation_report.md
workflows/: flux2_klein_image_edit_clean_api.json  flux2_klein_image_edit_grow.json  flux2_klein_image_edit_grow_api.json  flux2_klein_image_edit_grow_api_trial.json  image_qwen_image_edit_2511.json
