[project]
name = "comfyui-dit-watermark"
version = "0.3.0"
description = "Fast GROW frequency-guided DiT watermarking with Reed-Solomon detection for ComfyUI"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[project.urls]
Repository = "https://github.com/zhangp365/comfyui-dit-watermark"

[tool.comfy]
PublisherId = "zhangp365"
DisplayName = "comfyui-dit-watermark"
Icon = ""

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.10"
