[project]
name = "comfyui-dit-watermark"
version = "0.4.0"
description = "GROW DiT watermarking with shared embed/detect configuration for ComfyUI"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[project.urls]
Repository = "https://github.com/zhangp365/comfyui-dit-watermark"

[tool.comfy]
PublisherId = "zhangp365"
DisplayName = "comfyui-dit-watermark"
Icon = ""

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.10"
